spring security overview

--- a/2-spring/money-transfer-system/src/main/resources/static/index.html
+++ b/2-spring/money-transfer-system/src/main/resources/static/index.html
@@ -11,37 +11,13 @@
 
 <body>
 
-    <div class="container">
-        <div class="display-1">Money Transfer System</div>
-        <hr />
+<div class="container">
+    <div class="display-1">Money Transfer System</div>
+    <hr />
 
-        <div class="row">
-            <div class="col-4">
-                <div class="card">
-                    <div class="card-header">Transfer</div>
-                    <div class="card-body">
-                        <form action="transfer" method="post">
-                            <div class="form-group">
-                                <label>From Account Number</label>
-                                <input type="text" class="form-control" name="fromAccountNumber">
-                            </div>
-                            <div class="form-group">
-                                <label>To Account Number</label>
-                                <input type="text" class="form-control" name="toAccountNumber">
-                            </div>
-                            <div class="form-group">
-                                <label>Amount</label>
-                                <input type="text" class="form-control" name="amount">
-                            </div>
-                            <br />
-                            <button type="submit" class="btn btn-primary">Transfer</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <a href="transfer" class="btn btn-danger">Transfer Form</a>
 
-    </div>
+</div>
 
 </body>
 
